--- a/templates/main/news.html.twig
+++ b/templates/main/news.html.twig
@@ -13,8 +13,7 @@
                         <p>
                             {{ item.text }}
                         </p>
-                        <span>Опубликовано: </span>
-                        <small>{{ item.publishedAt|format_date(locale='ru', ) }}</small>
+                        <span>{{ item.publishedAt|format_date(locale='ru', ) }}</span>
                     </div>
                 </blockquote>
             </div>
