--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -14,8 +14,7 @@
                                 <p>
                                     {{ item.text|truncateSentence }}
                                 </p>
-                                <span>Опубликовано: </span>
-                                <small>{{ item.publishedAt|format_date(locale='ru', ) }}</small>
+                                <span>{{ item.publishedAt|format_date(locale='ru', ) }}</span>
                             </div>
                         </blockquote>
                     </div>
